--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
-url: "https://allthemore247.github.io/testwebsite" # the base hostname & protocol for your site, e.g. http://example.com
+url: "https://luhighperformancecomputingclub.github.io/hpc-website/" # the base hostname & protocol for your site
 baseurl: "" # the subpath of your site, e.g. /blog
 permalink: /posts/:title # used to set the url of each post to a title instead of a date
-title: "HPC Website" # the name of your site, e.g. ACME Corp.
+title: "LU High Performance Computing Club" # the name of your site, e.g. ACME Corp.
 highlighter: "rouge"
